--- a/app/styles/ui/_foldout.scss
+++ b/app/styles/ui/_foldout.scss
@@ -3,13 +3,13 @@
 
   .overlay {
     background: black;
-    opacity: 0.5;
-    z-index: 4;
+    opacity: 0.4;
+    z-index: var(--foldout-z-index);
     height: 100%;
   }
 
   .foldout {
     background: white;
-    z-index: 4;
+    z-index: var(--foldout-z-index);
   }
 }
